@@ -7,13 +7,13 @@ import com.prosilion.nostr.event.EventIF;
 import com.prosilion.nostr.event.GenericEventRecord;
 import com.prosilion.nostr.event.internal.Relay;
 import com.prosilion.nostr.tag.AddressTag;
-import com.prosilion.nostr.tag.ExternalIdentityTag;
 import com.prosilion.nostr.tag.IdentifierTag;
 import com.prosilion.nostr.tag.PubKeyTag;
 import com.prosilion.nostr.tag.RelayTag;
 import com.prosilion.nostr.user.Identity;
 import com.prosilion.nostr.user.PublicKey;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -46,10 +46,10 @@ public class BadgeAwardUpvoteEventTest {
         addressTag -> badgeDefnUpvoteEvent);
 
     assertEquals(badgeAwardGenericEvent, badgeAwardUpvoteEvent);
-    assertEquals(badgeAwardGenericEvent.getBadgeDefinitionGenericEvent(), badgeAwardUpvoteEvent.getBadgeDefinitionGenericEvent());
-    assertEquals(badgeAwardGenericEvent.getContainedAddressableEvents(), badgeAwardUpvoteEvent.getContainedAddressableEvents());
-    assertEquals(badgeAwardGenericEvent.getRelayTagRelay(), badgeAwardUpvoteEvent.getRelayTagRelay());
-    assertEquals(badgeAwardGenericEvent.getContainedAddressableEvents(), badgeAwardUpvoteEvent.getContainedAddressableEvents());
+    assertEquals(badgeAwardGenericEvent.getBadgeDefinitionEvent(), badgeAwardUpvoteEvent.getBadgeDefinitionEvent());
+    assertEquals(List.of(badgeAwardGenericEvent.getAddressableEvent().asAddressableEventAddressTag()), List.of(badgeAwardUpvoteEvent.getAddressableEvent().asAddressableEventAddressTag()));
+    assertEquals(badgeAwardGenericEvent.getEventOriginRelay(), badgeAwardUpvoteEvent.getEventOriginRelay());
+    assertEquals(List.of(badgeAwardGenericEvent.getAddressableEvent().asAddressableEventAddressTag()), List.of(badgeAwardUpvoteEvent.getAddressableEvent().asAddressableEventAddressTag()));
   }
 
   @Test
@@ -59,12 +59,12 @@ public class BadgeAwardUpvoteEventTest {
         badgeReceiverPublicKey,
         relay,
         badgeDefnUpvoteEvent,
-        Collections.unmodifiableList(badgeAwardGenericEvent.getContainedAddressableEvents()));
+        Collections.unmodifiableList(List.of(badgeAwardGenericEvent.getAddressableEvent().asAddressableEventAddressTag())));
 
-    assertEquals(1, badgeAwardUpvoteEvent.getContainedAddressableEvents().size());
+    assertEquals(1, List.of(badgeAwardUpvoteEvent.getAddressableEvent().asAddressableEventAddressTag()).size());
     assertEquals(1, badgeAwardUpvoteEvent.getTypeSpecificTags(AddressTag.class).size());
 
-    assertEquals(1, badgeAwardUpvoteEvent.getBadgeDefinitionGenericEvent().getTypeSpecificTags(IdentifierTag.class).size());
+    assertEquals(1, badgeAwardUpvoteEvent.getBadgeDefinitionEvent().getTypeSpecificTags(IdentifierTag.class).size());
 
     assertEquals(1, badgeAwardUpvoteEvent.getTypeSpecificTags(PubKeyTag.class).size());
     assertEquals(1, badgeAwardUpvoteEvent.getTypeSpecificTags(RelayTag.class).size());
